--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -25,25 +25,34 @@
   font-weight: bold;
 }
 
-.item-image-lists {
+.item-main-image {
   width: 100vw;
   height: 50vh;
+  padding-left: 5vw;
+  padding-right: 5vw;
+}
+
+.item-image-lists {
+  width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content:space-between;
+  overflow-x: scroll;
 }
 
 .item-img {
   width: 40vw;
   height: 50vh;
+  margin: 0 1vw;
 }
 
 .item-show-name {
   width: 85%;
-  margin: 1vh auto;
+  margin: 2vh auto;
 }
 
 .item-name {
-  font-size: 1.6em;
+  font-size: 1.7em;
   font-weight: bold;
   overflow-wrap: break-word;
 }
