商品購入ページ画像表示修正

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,7 +8,7 @@
     </div>
 
     <div class='order-item-confirmation'>
-      <%= image_tag @item.image, class: 'order-img' %>
+      <%= image_tag @item.images[0], class: 'order-img' %>
       <div class='order-item-info'>
         <p class='order-item-name'><%= @item.name %></p>
         <p class='order-item-price'>
