--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
           <%= link_to "#", class: 'mypage-btn mypage-like-btn' do %>
             <p class='mypage-btn-text'>お気に入り</p>
           <% end %>
-          <%= link_to "#", class: 'mypage-btn mypage-history-btn' do %>
+          <%= link_to item_order_path(current_user.id), class: 'mypage-btn mypage-history-btn' do %>
             <p class='mypage-btn-text'>購入履歴</p>
           <% end %>
           <%= link_to edit_user_registration_path(current_user.id), class: 'mypage-btn user-edit-btn' do %>
